--- a/SmartMarathon.App/Views/Shared/_Layout.cshtml
+++ b/SmartMarathon.App/Views/Shared/_Layout.cshtml
@@ -102,5 +102,16 @@
         appInsights.start("39aa8c31-6da8-45ba-a28a-3a93bedfdaf7");
         appInsights.logPageView();
     </script>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-53689877-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
 </html>
