--- a/trunk/SmartMarathon.App/Views/Shared/EditorTemplates/Splits.cshtml
+++ b/trunk/SmartMarathon.App/Views/Shared/EditorTemplates/Splits.cshtml
@@ -12,8 +12,8 @@
         <tr>            
             <th>@metric</th>
             <th>CC</th>
-            <th>PACE</th>
-            <th>TIME</th>
+            <th>@Resources.Label_Pace</th>
+            <th>@Resources.Label_Time</th>
         </tr>
     </thead>
     <tbody>
@@ -40,7 +40,7 @@
             <td class="col-md-1"></td>
             <td class="col-md-1"></td>
             <td class="col-md-2">
-                @Html.Label("FINISH TIME")
+                @Html.Label(Resources.Label_FinishTime)
             </td>
             <td class="col-md-1">
                 @finishTime
