--- a/trunk/SmartMarathon.App/Views/Home/Splits.cshtml
+++ b/trunk/SmartMarathon.App/Views/Home/Splits.cshtml
@@ -2,9 +2,9 @@
 
 <div class="col-md-offset-3 col-md-5">
     <div id="Kms">
-        @Html.EditorFor(m => m.Splits.Kilometers, new { InKms = ViewData["InKms"], SplitCategories = ViewData["SplitCategories"] })
+        @Html.EditorFor(m => m.Splits.Kilometers, new { Metric = "KM", SplitCategories = ViewData["SplitCategories"] })
     </div>
     <div id="Miles">
-        @Html.EditorFor(m => m.Splits.Miles, new { InKms = ViewData["InKms"], SplitCategories = ViewData["SplitCategories"] })
+        @Html.EditorFor(m => m.Splits.Miles, new { Metric = "M", SplitCategories = ViewData["SplitCategories"] })
     </div>
 </div>
