--- a/trunk/SmartMarathon.App/Views/Shared/EditorTemplates/Splits.cshtml
+++ b/trunk/SmartMarathon.App/Views/Shared/EditorTemplates/Splits.cshtml
@@ -1,8 +1,7 @@
 ﻿@model List<SmartMarathon.App.Models.SplitData>
 
 @{
-    var inKms = Convert.ToBoolean(ViewData["InKms"]);
-    var metric = inKms ? "KM" : "M";
+    var metric = ViewData["Metric"];
     var splitCategories = ViewData["SplitCategories"] as SelectList;
     var splits = Model != null ? Model.Count : 0;
     var finishTime = splits > 0 ? @Model[splits - 1].Time : new TimeSpan();
