--- a/SmartMarathon.App/Views/Home/Index.cshtml
+++ b/SmartMarathon.App/Views/Home/Index.cshtml
@@ -70,7 +70,7 @@
                 </div>                
             </div>
             <div class="row" id="splits-box">
-                @{ Html.RenderPartial("Splits", Model, new ViewDataDictionary { { "InKms", Model.InKms }, { "SplitCategories", Model.SplitCategories } }); }
+                @{ Html.RenderPartial("Splits", Model, new ViewDataDictionary { { "SplitCategories", Model.SplitCategories } }); }
             </div>
             <div class="row">
                 <div class="col-md-offset-3">
