--- a/SmartMarathon.App/Views/Home/Index.cshtml
+++ b/SmartMarathon.App/Views/Home/Index.cshtml
@@ -62,7 +62,13 @@
                     @Html.ValidationMessageFor(m => m.Distance)
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-group hidden" id="otherDistance-box">
+                @Html.LabelFor(m => m.OtherDistance, new { @class = "control-label col-md-offset-2 col-md-2" })
+                <div class="col-md-3">
+                    @Html.TextBoxFor(m => m.OtherDistance, new { @class = "form-control numericOnly", @type = "number" })
+                </div>
+            </div>
+            <div class="form-group" id="events-box">
                 @Html.LabelFor(m => m.Marathon, new { @class = "control-label col-md-offset-2 col-md-2" })
                 <div class="col-md-3">
                     @Html.DropDownListFor(m => m.Marathon, Model.Marathons, new { @class = "form-control" })
@@ -191,7 +197,19 @@
             $("#Distance").change(function () {
                 var url = '@Url.Action("EventsByDistance")';
                 var distance = $(this).val();
-                LoadEvents(url, distance);
+                if (distance == 0) {                    
+                    $('#events-box').addClass('hidden');
+                    $('#otherDistance-box').removeClass('hidden');
+                }
+                else {
+                    $('#otherDistance-box').addClass('hidden');
+                    $('#events-box').removeClass('hidden');
+                    LoadEvents(url, distance);
+                }
+                Submit();
+            });
+
+            $("#OtherDistance").change(function () {
                 Submit();
             });
 
@@ -209,6 +227,10 @@
                     ChangeLanguage(url, evt.selectedItem);
                 }
             });
+
+            setTimeout(function () {
+                $('html, body').animate({ scrollTop: $("#f").offset().top }, 2000);
+            }, 1500);
         });
 </script>
 }
